--- a/codedeploy/appspec.yml
+++ b/codedeploy/appspec.yml
@@ -5,22 +5,22 @@ files:
     destination: /opt/voyager/app
 hooks:
   BeforeInstall:
-    - location: scripts/before_install
+    - location: scripts/before_install.sh
       timeout: 300
       runas: root
   AfterInstall:
-    - location: scripts/install_dependencies
+    - location: scripts/install_dependencies.sh
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: scripts/start_server
+    - location: scripts/start_server.sh
       timeout: 300
       runas: root
   ApplicationStop:
-    - location: scripts/stop_server
+    - location: scripts/stop_server.sh
       timeout: 300
       runas: root
   ValidateService:
-    - location: scripts/validate_service
+    - location: scripts/validate_service.sh
       timeout: 300
       runas: root
